hopefully fixed superscript fucking with linespacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,3 +240,10 @@
     font-size: 0.8em;
     margin-top: 50px;
 }
+
+sup, sub {
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em;
+}
+sub { top: 0.4em; }
